--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tabler/icons-react": "^3.31.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
     "haversine-distance": "^1.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
